--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
         exclude module: 'stax-api'
         exclude module: 'xpp3'
     }
+    compile 'com.github.gabrielemariotti.cards:library:1.9.1'
 
 
     androidTestCompile 'junit:junit:4.11'
@@ -48,7 +49,7 @@ android {
     buildToolsVersion '20.0.0'
 
     defaultConfig {
-        minSdkVersion 8
+        minSdkVersion 14
         targetSdkVersion 20
         versionCode 1
         versionName '1.0'
