--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ repositories {
 }
 
 dependencies {
+    compile project(':AndroidBootstrap')
     compile 'com.android.support:appcompat-v7:20.0.0'
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.squareup.dagger:dagger:1.0.1'
@@ -31,14 +32,12 @@ dependencies {
     compile 'com.squareup:otto:1.3.4'
     compile 'com.squareup.picasso:picasso:1.1.1'
     compile 'com.squareup.retrofit:retrofit:1.7.0'
-    compile ('org.simpleframework:simple-xml:2.7.1'){
+    compile('org.simpleframework:simple-xml:2.7.1') {
         exclude module: 'stax'
         exclude module: 'stax-api'
         exclude module: 'xpp3'
     }
     compile 'com.github.gabrielemariotti.cards:library:1.9.1'
-
-
     androidTestCompile 'junit:junit:4.11'
     androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
     androidTestCompile 'org.mockito:mockito-core:1.9.5'
